--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -9,7 +9,7 @@
                         target="_blank" rel="noopener">DEVOPS</a></p>
             </div>
             <div class="col-md-4">
-                <p>Monitoring <a href="https://grafana.pearl9.cloud/public-dashboards/23490b7b4ca84f19a197c7af8ba7c64b?orgId=1&refresh=1m" target="_blank" rel="noopener">Jenkins</a></p>
+                <p>Monitoring <a href="https://agileopspro.grafana.net/public-dashboards/506698168b8d4631b6a54caff0597501?orgId=1&refresh=1m" target="_blank" rel="noopener">Jenkins</a></p>
             </div>
         </div>
     </div>
