--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
+@import url(./css.css);
 
 * {
   box-sizing: border-box;
@@ -22,7 +22,7 @@ canvas {
   height: 552px;
   width: 422px;
   display: block;
-  background: url(http://i.imgur.com/Y0BMP.png) top left;
+  background: url(Y0BMP.png) top left;
 }
 
 #scoreBoard {
@@ -33,7 +33,7 @@ canvas {
   top: -3px;
   left: 0;
   z-index: -1;
-  border-image: url(http://i.imgur.com/5BBsR.png) 100 5 round;
+  border-image: url(5BBsR.png) 100 5 round;
 }
 
 #scoreBoard p {
@@ -86,7 +86,7 @@ h3 a {
 .button {
   width: 105px;
   height: 31px;
-  background: url(http://i.imgur.com/2WEhF.png) 0 0 no-repeat;
+  background: url(2WEhF.png) 0 0 no-repeat;
   display: block;
   color: #000;
   font-size: 12px;
@@ -109,7 +109,7 @@ h3 a {
 .info .key {
   width: 16px;
   height: 16px;
-  background: url(http://i.imgur.com/2WEhF.png) no-repeat;
+  background: url(2WEhF.png) no-repeat;
   text-indent: -9999px;
   display: inline-block;
 }
