--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,5 +1,1 @@
-@font-face {
-  font-family: "Gunplay";
-  src: url("../fonts/gunplay.ttf") format("truetype");
-  font-weight: 400;
-}
+@font-face{font-family:"Gunplay";src:url("../fonts/gunplay.ttf") format("truetype");font-weight:400;}
