--- a/shared/style.css
+++ b/shared/style.css
@@ -1,150 +1,1 @@
-.sound-overlay {
-  z-index: 99999;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  opacity: 0.9;
-  background: black;
-}
-
-.sound-text {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  color: white;
-  font-size: 20px;
-  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-}
-
-.redirect-overlay {
-  z-index: 99999;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  background: black;
-}
-
-.redirect-text {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  color: white;
-  font-size: 20px;
-  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-}
-
-.redirect-text a {
-  color: red;
-}
-
-.link-to-y8-url {
-  height: 40px;
-  float: left;
-  padding: 0 10px;
-  color: white;
-  font-size: 18px;
-}
-
-.link-to-y8-url a {
-  color: red;
-}
-
-.game-name {
-  padding: 0 10px;
-  margin: 0;
-  color: #fff;
-  font-size: 18px;
-  display: inline-block;
-  font-weight: normal;
-}
-
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease;
-}
-
-.popup-content {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-@keyframes popIn {
-  from {
-    transform: translate(-50%, -150%) scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes popOut {
-  from {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-  to {
-    transform: translate(-50%, 150%) scale(0.8);
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-.popup-button {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 10px;
-  transition: transform 0.2s ease-in-out;
-}
-
-.popup-button:hover {
-  transform: scale(1.2);
-}
-
-.popup-buttons {
-  margin-top: 20px;
-}
+.sound-overlay{z-index:99999;position:absolute;top:0;left:0;width:100%;height:100%;text-align:center;opacity:.9;background:black;}.sound-text{position:relative;top:50%;transform:translateY(-50%);color:white;font-size:20px;text-shadow:1px 0 0 #000,0 -1px 0 #000,0 1px 0 #000,-1px 0 0 #000;}.redirect-overlay{z-index:99999;position:absolute;top:0;left:0;width:100%;height:100%;text-align:center;background:black;}.redirect-text{position:relative;top:50%;transform:translateY(-50%);color:white;font-size:20px;text-shadow:1px 0 0 #000,0 -1px 0 #000,0 1px 0 #000,-1px 0 0 #000;}.redirect-text a{color:red;}.link-to-y8-url{height:40px;float:left;padding:0 10px;color:white;font-size:18px;}.link-to-y8-url a{color:red;}.game-name{padding:0 10px;margin:0;color:#fff;font-size:18px;display:inline-block;font-weight:normal;}.popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;backdrop-filter:blur(5px);background-color:rgba(0,0,0,.5);transition:opacity .3s ease;}.popup-content{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:rgba(255,255,255,.8);padding:20px;text-align:center;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.5);transition:transform .3s ease,opacity .3s ease;}@keyframes popIn{from{transform:translate(-50%,-150%) scale(.8);opacity:0}to{transform:translate(-50%,-50%) scale(1);opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes popOut{from{transform:translate(-50%,-50%) scale(1);opacity:1}to{transform:translate(-50%,150%) scale(.8);opacity:0}}@keyframes fadeOut{from{opacity:1}to{opacity:0}}.popup-button{cursor:pointer;background-color:transparent;border:none;font-size:20px;padding:10px 20px;margin:0 10px;border-radius:10px;transition:transform .2s ease-in-out;}.popup-button:hover{transform:scale(1.2);}.popup-buttons{margin-top:20px;}
