--- a/style.css
+++ b/style.css
@@ -1,164 +1,1 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  background-color: black;
-}
-
-canvas.emscripten {
-  border: 0px none;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-}
-
-canvas.emscripten.visible {
-  opacity: 1;
-  transition: opacity 0.5s ease-in;
-  transition-delay: 1s;
-}
-
-.canvas-container-outer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-.canvas-container {
-  position: relative;
-  margin: auto;
-  background-image: url("splash.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-.progress {
-  position: absolute;
-  top: 84%;
-  left: 0;
-  right: 0;
-  width: 90%;
-  height: 28px;
-  margin: 0 auto;
-  margin-bottom: 24px;
-  overflow: hidden;
-  border-radius: 2px;
-  background-color: #f7f7f7;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
-}
-
-.progress-bar {
-  float: left;
-  width: 0;
-  min-width: 2%;
-  height: 100%;
-  font-size: 20px;
-  font-family: monospace;
-  line-height: 28px;
-  color: #aaa;
-  text-align: center;
-  transition: width 0.1s ease;
-  background-color: #292929;
-}
-
-.touchLayer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease;
-}
-
-.popup-content {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-@keyframes popIn {
-  from {
-    transform: translate(-50%, -150%) scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes popOut {
-  from {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-  to {
-    transform: translate(-50%, 150%) scale(0.8);
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-.popup-button {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 10px;
-  transition: transform 0.2s ease-in-out;
-}
-
-.popup-button:hover {
-  transform: scale(1.2);
-}
-
-.popup-buttons {
-  margin-top: 20px;
-}
+*{box-sizing:border-box;}body{margin:0;background-color:black;}canvas.emscripten{border:0 none;width:100%;position:absolute;top:0;left:0;width:100%;height:100%;opacity:0;}canvas.emscripten.visible{opacity:1;transition:opacity .5s ease-in;transition-delay:1s;}.canvas-container-outer{position:absolute;top:0;left:0;right:0;bottom:0;}.canvas-container{position:relative;margin:auto;background-image:url("splash.png");background-size:cover;background-repeat:no-repeat;background-position:center center;}.progress{position:absolute;top:84%;left:0;right:0;width:90%;height:28px;margin:0 auto;margin-bottom:24px;overflow:hidden;border-radius:2px;background-color:#f7f7f7;box-shadow:inset 0 1px 2px rgba(0,0,0,.3);}.progress-bar{float:left;width:0;min-width:2%;height:100%;font-size:20px;font-family:monospace;line-height:28px;color:#aaa;text-align:center;transition:width .1s ease;background-color:#292929;}.touchLayer{position:absolute;top:0;left:0;width:100%;height:100%;}.popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;backdrop-filter:blur(5px);background-color:rgba(0,0,0,.5);transition:opacity .3s ease;}.popup-content{display:flex;flex-direction:column;justify-content:center;align-items:center;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:rgba(255,255,255,.8);padding:20px;text-align:center;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.5);transition:transform .3s ease,opacity .3s ease;max-width:90%;max-height:90%;}@keyframes popIn{from{transform:translate(-50%,-150%) scale(.8);opacity:0}to{transform:translate(-50%,-50%) scale(1);opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes popOut{from{transform:translate(-50%,-50%) scale(1);opacity:1}to{transform:translate(-50%,150%) scale(.8);opacity:0}}@keyframes fadeOut{from{opacity:1}to{opacity:0}}.popup-button{cursor:pointer;background-color:transparent;border:none;font-size:20px;padding:10px 20px;margin:0 10px;border-radius:10px;transition:transform .2s ease-in-out;color:#575af3;}.popup-button:hover{color:#007bff;transform:scale(1.2);}.popup-buttons{display:flex;justify-content:space-around;margin-top:20px;}.popup-content-heading{font-weight:bold;color:#4bb711;border-bottom:2px solid #cf4f04;padding-bottom:5px;margin-bottom:10px;}.popup-scrollable-content{max-height:60vh;overflow-y:auto;padding-right:15px;}.popup-scrollable-content::-webkit-scrollbar{width:2px;}.popup-scrollable-content::-webkit-scrollbar-track{background:#f1f1f1;}.popup-scrollable-content::-webkit-scrollbar-thumb{background:#888;}.popup-scrollable-content::-webkit-scrollbar-thumb:hover{background:#555;}
