--- a/TemplateData/loader.css
+++ b/TemplateData/loader.css
@@ -1,29 +1,1 @@
-#webgl-content {
-}
-
-#adv_mainContainer {
-  z-index: 1;
-  position: fixed;
-  display: none;
-  background: none;
-  overflow: hidden;
-  pointer-events: all;
-}
-
-#adv_content,
-#adv_adContainer {
-  z-index: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  pointer-events: all;
-}
-
-#adv_contentElement {
-  width: 0px;
-  height: 0px;
-  overflow: hidden;
-}
+#webgl-content{}#adv_mainContainer{z-index:1;position:fixed;display:none;background:none;overflow:hidden;pointer-events:all;}#adv_content,#adv_adContainer{z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;overflow:hidden;pointer-events:all;}#adv_contentElement{width:0;height:0;overflow:hidden;}
