--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,168 +1,1 @@
-.webgl-content * {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-.webgl-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.webgl-content .logo,
-.progress {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-.webgl-content .logo {
-  background: url("progressLogo.Light.png") no-repeat center / contain;
-  width: 154px;
-  height: 130px;
-}
-.webgl-content .progress {
-  height: 18px;
-  width: 141px;
-  margin-top: 90px;
-}
-.webgl-content .progress .empty {
-  background: url("progressEmpty.Light.png") no-repeat right / cover;
-  float: right;
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-}
-.webgl-content .progress .full {
-  background: url("progressFull.Light.png") no-repeat left / cover;
-  float: left;
-  width: 0%;
-  height: 100%;
-  display: inline-block;
-}
-
-.webgl-content .logo.Dark {
-  background-image: url("progressLogo.Dark.png");
-}
-.webgl-content .progress.Dark .empty {
-  background-image: url("progressEmpty.Dark.png");
-}
-.webgl-content .progress.Dark .full {
-  background-image: url("progressFull.Dark.png");
-}
-
-.webgl-content .footer {
-  margin-top: 5px;
-  height: 38px;
-  line-height: 38px;
-  font-family: Helvetica, Verdana, Arial, sans-serif;
-  font-size: 18px;
-}
-.webgl-content .footer .webgl-logo,
-.title,
-.fullscreen {
-  height: 100%;
-  display: inline-block;
-  background: transparent center no-repeat;
-}
-.webgl-content .footer .webgl-logo {
-  background-image: url("webgl-logo.png");
-  width: 204px;
-  float: left;
-}
-.webgl-content .footer .title {
-  margin-right: 10px;
-  float: right;
-}
-.webgl-content .footer .fullscreen {
-  background-image: url("fullscreen.png");
-  width: 38px;
-  float: right;
-}
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease;
-}
-
-.popup-content {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-@keyframes popIn {
-  from {
-    transform: translate(-50%, -150%) scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes popOut {
-  from {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-  to {
-    transform: translate(-50%, 150%) scale(0.8);
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-.popup-button {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 10px;
-  transition: transform 0.2s ease-in-out;
-}
-
-.popup-button:hover {
-  transform: scale(1.2);
-}
-
-.popup-buttons {
-  margin-top: 20px;
-}
+.webgl-content *{border:0;margin:0;padding:0;}.webgl-content{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);}.webgl-content .logo,.progress{position:absolute;left:50%;top:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);}.webgl-content .logo{background:url("progressLogo.Light.png") no-repeat center / contain;width:154px;height:130px;}.webgl-content .progress{height:18px;width:141px;margin-top:90px;}.webgl-content .progress .empty{background:url("progressEmpty.Light.png") no-repeat right / cover;float:right;width:100%;height:100%;display:inline-block;}.webgl-content .progress .full{background:url("progressFull.Light.png") no-repeat left / cover;float:left;width:0;height:100%;display:inline-block;}.webgl-content .logo.Dark{background-image:url("progressLogo.Dark.png");}.webgl-content .progress.Dark .empty{background-image:url("progressEmpty.Dark.png");}.webgl-content .progress.Dark .full{background-image:url("progressFull.Dark.png");}.webgl-content .footer{margin-top:5px;height:38px;line-height:38px;font-family:Helvetica,Verdana,Arial,sans-serif;font-size:18px;}.webgl-content .footer .webgl-logo,.title,.fullscreen{height:100%;display:inline-block;background:transparent center no-repeat;}.webgl-content .footer .webgl-logo{background-image:url("webgl-logo.png");width:204px;float:left;}.webgl-content .footer .title{margin-right:10px;float:right;}.webgl-content .footer .fullscreen{background-image:url("fullscreen.png");width:38px;float:right;}.popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;backdrop-filter:blur(5px);background-color:rgba(0,0,0,.5);transition:opacity .3s ease;}.popup-content{display:flex;flex-direction:column;justify-content:center;align-items:center;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:rgba(255,255,255,.8);padding:20px;text-align:center;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.5);transition:transform .3s ease,opacity .3s ease;max-width:90%;max-height:90%;}@keyframes popIn{from{transform:translate(-50%,-150%) scale(.8);opacity:0}to{transform:translate(-50%,-50%) scale(1);opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes popOut{from{transform:translate(-50%,-50%) scale(1);opacity:1}to{transform:translate(-50%,150%) scale(.8);opacity:0}}@keyframes fadeOut{from{opacity:1}to{opacity:0}}.popup-button{cursor:pointer;background-color:transparent;border:none;font-size:20px;padding:10px 20px;margin:0 10px;border-radius:10px;transition:transform .2s ease-in-out;color:#575af3;}.popup-button:hover{color:#007bff;transform:scale(1.2);}.popup-buttons{display:flex;justify-content:space-around;margin-top:20px;}.popup-content-heading{font-weight:bold;color:#4bb711;border-bottom:2px solid #cf4f04;padding-bottom:5px;margin-bottom:10px;}.popup-scrollable-content{max-height:60vh;overflow-y:auto;padding-right:15px;}.popup-scrollable-content::-webkit-scrollbar{width:2px;}.popup-scrollable-content::-webkit-scrollbar-track{background:#f1f1f1;}.popup-scrollable-content::-webkit-scrollbar-thumb{background:#888;}.popup-scrollable-content::-webkit-scrollbar-thumb:hover{background:#555;}
